--- a/sass/includes/_module-sidebar-nav.scss
+++ b/sass/includes/_module-sidebar-nav.scss
@@ -10,7 +10,8 @@
     padding: 0;
 }
 .site-footer .menu li a {
-    padding: 0 0 0.25em 0;
+    line-height: 1.4em;
+    padding: 0 0 0.5em;
 }
 .main .content > .menu > li > a, 
 .site-footer .content > .menu > li > a {
